src/K8s/userprofile.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: user-profile
  namespace: api-dev
spec: 
  selector: 
    matchLabels: 
      run: userprofile-label 
  replicas: 2 
  template: 
    metadata: 
      labels: 
        run: userprofile-label 
    spec: 
      containers: 
        - name: user-profile 
          image: registryzuh9724.azurecr.io/userprofile:0.0.1 
          ports: 
            - containerPort: 8080 
              protocol: TCP
