src/K8s/user-java-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userjava-service
  labels:
    run: userjava-label
spec:
  selector:
    run: userjava-label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
