src/K8s/user_profile_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
  labels:
    run: userprofile-label
spec:
  selector:
    run: userprofile-label
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
